wraphalf fixed

--- a/gallery_beta.css
+++ b/gallery_beta.css
@@ -495,7 +495,6 @@ html{
 	width:600px;
 	float:left;
 	display:block;
-	max-height:600px;
 }
 .wraphalf img{
 	width:600px;
